[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "drains"
author = "Federico Marani"
author-email = "me@federicomarani.com"
description-file = "README.md"
requires-python = ">=3.8"
home-page = "https://github.com/fmarani/drains"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires = [
  "aioredis==1.3.1"
]
